# agent-council

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cassettes/recordings/: 034dea8d582c8cfa.json  070f98387ee5e636.json  143d56373e3a32aa.json  2d5fd5b85929c4c3.json  3d3482cb0fd32abe.json  3da0a9c5d3326bc0.json  42d79515b80fa94d.json  5a13481d86b7e064.json  69cb0c6140186133.json  6b06e74999551ed4.json  75f76e3799515972.json  8dcacc397156d9e7.json  dd23d9ac18a71646.json  e4ca30f0d91f5173.json
docs/: architecture.md  cassettes.md  cli.md  mcp.md  templates.md  web-ui.md
evals/: coding-questions.yaml  latest.md
prompts/: CHANGELOG.md
quorum/: __init__.py  cli.py
quorum/api/: events.py  server.py
quorum/council/: decision.py  engine.py  models.py  prompts.py  review.py  roles.py
quorum/llm/: cassettes.py  errors.py  openrouter.py
quorum/mcp/: server.py
quorum/providers/: base.py
quorum/storage/: sqlite.py
scripts/: generate_samples.py
templates/: architecture-review.yaml  pr-review.yaml  song-writer.yaml
tests/: conftest.py  test_api.py  test_cassettes.py  test_engine.py  test_models.py  test_openrouter.py  test_prompts.py  test_review.py
tests/fixtures/: sample.diff  song-brief.txt
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: CassetteDropzone.tsx  CassetteModeSelect.tsx  CommandPalette.tsx  CouncilPreview.tsx  DecisionReportCard.tsx  IdentityToggle.tsx  InputDropzone.tsx  JudgeVerdict.tsx  (+8 more)
(+17 files in other folders)
